# chrome-dino-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Package.appxmanifest  README  README.md
src/: auto_player.h  cloud.h  colbox.h  defs.h  distance_meter.h  drawSprite.h  game.cpp  game.h  game_over_panel.h  horizon.h  horizon_line.h  main-uwp.cpp  main.cpp  night_mode.h  obstacle.cpp  obstacle.h  rand.h  trex.cpp  trex.h  util.h
src/entities/: cloud.h  distance_meter.h  game_over_panel.h  horizon.h  horizon_line.h  night_mode.h  obstacle.cpp  obstacle.h  trex.cpp  trex.h
src/entry/: main-uwp.cpp  main.cpp  main.rc
